--- a/.github/workflows/job-cd-postdeploy-magento.yml
+++ b/.github/workflows/job-cd-postdeploy-magento.yml
@@ -71,11 +71,6 @@ jobs:
           sudo chmod 777 ${COMMON_CONTAINER_STAGING_PATH}/${REPO_SLUG}-${RELEASE_VERSION}
           ls -la ${COMMON_CONTAINER_STAGING_PATH}
 
-#      - name: Setup kubectl
-#        run: |
-#          curl -LO "https://dl.k8s.io/release/$(curl -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
-#          chmod +x kubectl && mv kubectl /usr/local/bin/
-
       - uses: actions-hub/kubectl@master
         name: Get pods
         env:
@@ -94,7 +89,7 @@ jobs:
           args: apply -f ${{ inputs.MONOREPO_BUSINESS_DOMAIN }}/${{ inputs.WOPR_NAMESPACE }}/${{ inputs.REPO_SLUG }}/job.yaml
           
       - name: Write kubeconfig to file
-        run: echo "${WOPR_KUBECONFIG}" > kubeconfig
+        run: (umask 077; echo ${WOPR_KUBECONFIG} | base64 -d > kubeconfig)
         env:
           WOPR_KUBECONFIG: ${{ secrets._WOPR_KUBECONFIG }}
 
@@ -112,7 +107,6 @@ jobs:
           KUBECONFIG=./kubeconfig kubectl logs $POD_NAME -n $WOPR_NAMESPACE || echo "Log not available (pod may be gone)"
         env:
           WOPR_NAMESPACE: ${{ inputs.WOPR_NAMESPACE }}
-
 
       - name: Purge Job Cache
         run: |
