--- a/.github/workflows/job-no-validate-global.yml
+++ b/.github/workflows/job-no-validate-global.yml
@@ -89,6 +89,10 @@ jobs:
           ls -la ${COMMON_CONTAINER_STAGING_PATH}/${REPO_SLUG}-${RELEASE_VERSION}
           if [ -e ${COMMON_CONTAINER_STAGING_PATH}/${REPO_SLUG}-${RELEASE_VERSION}/pipeline.lock ]; then exit 1; fi
 
+      - name: Lint Dockerfile
+        run: |
+          sudo docker run --rm -i hadolint/hadolint < ${MONOREPO_BUSINESS_DOMAIN}/${REPO_SLUG}/src/Dockerfile || true
+
       - name: Purge Job Cache
         run: |
           ls -la ${COMMON_CONTAINER_STAGING_PATH}
