--- a/Core/xpipe-ecommerce/src/composer.json
+++ b/Core/xpipe-ecommerce/src/composer.json
@@ -30,6 +30,7 @@
         "sindria/module-cms": "1.0.0",
         "sindria/module-contact": "1.0.0",
         "sindria/module-copyright": "1.0.0",
+        "sindria/module-default-pages": "1.0.0",
         "sindria/module-default-users": "1.0.0",
         "sindria/module-faq": "1.0.0",
         "sindria/module-gdpr-cookie": "1.0.0",
