--- a/Products/XPipe/Web/xpipe-v1-web-portal/src/app/code/Pipe/DefaultPages/composer.json
+++ b/Products/XPipe/Web/xpipe-v1-web-portal/src/app/code/Pipe/DefaultPages/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "sindria/module-default-pages",
+    "name": "pipe/module-default-pages",
     "description": "Custom magento 2 module that override default pages",
     "config": {
         "sort-packages": true
@@ -22,7 +22,7 @@
             "registration.php"
         ],
         "psr-4": {
-            "Sindria\\DefaultPages\\": ""
+            "Pipe\\DefaultPages\\": ""
         }
     },
     "version": "1.0.0"
