--- a/Products/XPipe/Web/xpipe-v1-web-portal/src/app/code/Pipe/Backend/composer.json
+++ b/Products/XPipe/Web/xpipe-v1-web-portal/src/app/code/Pipe/Backend/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "sindria/module-backend",
+    "name": "pipe/module-backend",
     "description": "Custom magento 2 module backend for dashboard configuration",
     "config": {
         "sort-packages": true
@@ -22,7 +22,7 @@
             "registration.php"
         ],
         "psr-4": {
-            "Sindria\\Backend\\": ""
+            "Pipe\\Backend\\": ""
         }
     },
     "version": "1.0.0"
