--- a/Products/XPipe/Web/xpipe-v1-web-portal/src/app/code/Pipe/LandingPage/composer.json
+++ b/Products/XPipe/Web/xpipe-v1-web-portal/src/app/code/Pipe/LandingPage/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "sindria/module-landing-page",
+    "name": "pipe/module-landing-page",
     "description": "Magento 2 module landing page for storefront home page",
     "config": {
         "sort-packages": true
@@ -22,7 +22,7 @@
             "registration.php"
         ],
         "psr-4": {
-            "Sindria\\LandingPage\\": ""
+            "Pipe\\LandingPage\\": ""
         }
     },
     "version": "1.0.0"
