--- a/Products/XPipe/Web/xpipe-v1-web-portal/src/composer.json
+++ b/Products/XPipe/Web/xpipe-v1-web-portal/src/composer.json
@@ -20,6 +20,23 @@
     },
     "version": "2.4.3-p1",
     "require": {
+        "ai/module-chat": "1.0.0",
+        "core/module-base-logger": "1.0.0",
+        "core/module-catalog-search": "1.0.0",
+        "core/module-contact": "1.0.0",
+        "core/module-copyright": "1.0.0",
+        "core/module-fontawesome": "1.0.0",
+        "core/module-form-submit-guard": "1.0.0",
+        "core/module-gdpr-cookie": "1.0.0",
+        "core/module-logger": "1.0.0",
+        "core/module-marketplace": "1.0.0",
+        "core/module-newsletter": "1.0.0",
+        "core/module-profile": "1.0.0",
+        "core/module-sales": "1.0.0",
+        "core/module-search": "1.0.0",
+        "core/module-store-view-default": "1.0.0",
+        "core/module-store-view-italian": "1.0.0",
+        "core/module-welcome-message": "1.0.0",
         "magento/composer-dependency-version-audit-plugin": "~0.1",
         "magento/composer-root-update-plugin": "~1.1",
         "magento/product-community-edition": "2.4.3-p1"
