--- a/Products/XPipe/Web/xpipe-v1-web-portal/src/composer.json
+++ b/Products/XPipe/Web/xpipe-v1-web-portal/src/composer.json
@@ -21,6 +21,7 @@
     "version": "2.4.3-p1",
     "require": {
         "ai/module-chat": "1.0.0",
+        "cms/module-faq": "1.0.0",
         "cms/module-news": "1.0.0",
         "core/module-base-logger": "1.0.0",
         "core/module-catalog-search": "1.0.0",
