Lab: init Terminal module

--- a/Products/XPipe/Web/xpipe-v1-web-portal/src/composer.json
+++ b/Products/XPipe/Web/xpipe-v1-web-portal/src/composer.json
@@ -39,6 +39,7 @@
         "core/module-store-view-default": "1.0.0",
         "core/module-store-view-italian": "1.0.0",
         "core/module-welcome-message": "1.0.0",
+        "lab/module-terminal": "1.0.0",
         "magento/composer-dependency-version-audit-plugin": "~0.1",
         "magento/composer-root-update-plugin": "~1.1",
         "magento/product-community-edition": "2.4.3-p1",
