task-71: init notifications module

--- a/Products/XPipe/Web/xpipe-v1-web-portal/src/.gitignore
+++ b/Products/XPipe/Web/xpipe-v1-web-portal/src/.gitignore
@@ -220,6 +220,7 @@ atlassian*
 !/app/code/Pipe/LandingPage
 !/app/code/Pipe/LanguageSelector
 !/app/code/Pipe/ThemeSetup
+!/app/code/Pipe/Notifications
 
 /app/design/adminhtml/*
 !/app/design/adminhtml/.gitkeep
