--- a/Core/V1/Module/NotificationsPoller/composer.json
+++ b/Core/V1/Module/NotificationsPoller/composer.json
@@ -1,17 +1,29 @@
 {
-  "name": "core/module-notifications-poller",
-  "description": "Admin AJAX notification poller for Magento 2",
-  "require": {
-    "php": ">=7.4"
-  },
-  "type": "magento2-module",
-  "version": "1.0.1",
-  "autoload": {
-    "files": [
-      "registration.php"
+    "name": "core/module-notifications-poller",
+    "description": "Admin AJAX notification poller for Magento 2",
+    "config": {
+        "sort-packages": true
+    },
+    "require": {
+        "php": "~7.1.3||~7.2.0||~7.3.0||~7.4.0",
+        "magento/framework": "103.0.*",
+        "magento/module-store": "101.1.*"
+    },
+    "suggest": {
+        "magento/module-theme": "101.1.*"
+    },
+    "type": "magento2-module",
+    "license": [
+        "OSL-3.0",
+        "AFL-3.0"
     ],
-    "psr-4": {
-      "Core\\NotificationsPoller\\": ""
-    }
-  }
+    "autoload": {
+        "files": [
+            "registration.php"
+        ],
+        "psr-4": {
+            "Core\\NotificationsPoller\\": ""
+        }
+    },
+    "version": "1.0.0"
 }
