--- a/Products/XPipe/Web/xpipe-v1-web-portal/docker-compose.local.yml
+++ b/Products/XPipe/Web/xpipe-v1-web-portal/docker-compose.local.yml
@@ -10,10 +10,10 @@ services:
     volumes:
       - "${BASE_PATH}/${PROJECT_PATH}/${CODE_PATH}:${APP_CODE_PATH}"
       - "${BASE_PATH}/${CORE_MODULE_PATH}/:${APP_CODE_PATH}/${CORE_VENDOR_PATH}"
-      #- "${BASE_PATH}/${ACADEMY_MODULE_PATH}/:${APP_CODE_PATH}/${ACADEMY_VENDOR_PATH}"
+      - "${BASE_PATH}/${ACADEMY_MODULE_PATH}/:${APP_CODE_PATH}/${ACADEMY_VENDOR_PATH}"
       #- "${BASE_PATH}/${AI_MODULE_PATH}/:${APP_CODE_PATH}/${AI_VENDOR_PATH}"
       - "${BASE_PATH}/${CMDB_MODULE_PATH}/:${APP_CODE_PATH}/${CMDB_VENDOR_PATH}"
-      - "${BASE_PATH}/${CMS_MODULE_PATH}/:${APP_CODE_PATH}/${CMS_VENDOR_PATH}"
+      #- "${BASE_PATH}/${CMS_MODULE_PATH}/:${APP_CODE_PATH}/${CMS_VENDOR_PATH}"
       - "${BASE_PATH}/${CRM_MODULE_PATH}/:${APP_CODE_PATH}/${CRM_VENDOR_PATH}"
       - "${BASE_PATH}/${DOCS_MODULE_PATH}/:${APP_CODE_PATH}/${DOCS_VENDOR_PATH}"
       - "${BASE_PATH}/${LAB_MODULE_PATH}/:${APP_CODE_PATH}/${LAB_VENDOR_PATH}"
