--- a/Academy/V1/Module/News/composer.json
+++ b/Academy/V1/Module/News/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "academy/module-news",
-    "description": "Custom magento 2 module news",
+    "description": "Magento 2 module news",
     "config": {
         "sort-packages": true
     },
