XPipe: added business logic envs

--- a/Products/XPipe/Web/xpipe-v1-web-portal/.env.local
+++ b/Products/XPipe/Web/xpipe-v1-web-portal/.env.local
@@ -91,5 +91,6 @@ PIPELINES_VENDOR_PATH=app/code/Pipelines
 SECURITY_MODULE_PATH=Security/V1/Module
 SECURITY_VENDOR_PATH=app/code/Security
 
-
-
+# Business Logic envs
+PIPELINES_GITHUB_ACCESS_TOKEN=
+PIPELINES_ORCHESTRATOR_ACCESS_TOKEN=
