--- a/Products/XPipe/Web/xpipe-v1-web-portal/docker-compose.local.yml
+++ b/Products/XPipe/Web/xpipe-v1-web-portal/docker-compose.local.yml
@@ -22,6 +22,9 @@ services:
       - "${BASE_PATH}/${PIPELINES_MODULE_PATH}/:${APP_CODE_PATH}/${PIPELINES_VENDOR_PATH}"
       - "${BASE_PATH}/${SECURITY_MODULE_PATH}/:${APP_CODE_PATH}/${SECURITY_VENDOR_PATH}"
     hostname: "${APP_NAME}.local"
+    environment:
+      - PIPELINES_GITHUB_ACCESS_TOKEN=${PIPELINES_GITHUB_ACCESS_TOKEN}
+      - PIPELINES_ORCHESTRATOR_ACCESS_TOKEN=${PIPELINES_ORCHESTRATOR_ACCESS_TOKEN}
     ports:
       - "8090:80"
     networks:
