--- a/.github/workflows/lab-base-xdev-base.yml
+++ b/.github/workflows/lab-base-xdev-base.yml
@@ -1,16 +1,16 @@
-name: Core CI Xdev Main
+name: Lab Base XDev Base
 
 on:
   push:
     branches:
       - 'master'
     paths:
-      - Core/xdev/main/**/*.*
-      - .github/workflows/core-ci-xdev-main.yml
+      - Lab/Base/xdev/base/**/*.*
+      - .github/workflows/lab-base-xdev-base.yml
 
 defaults:
   run:
-    working-directory: Core/xdev/main
+    working-directory: Lab/Base/xdev/base
 
 jobs:
   build_publish:
@@ -18,7 +18,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Set env release
-      run: echo "RELEASE_VERSION=5.1.0" >> $GITHUB_ENV
+      run: echo "RELEASE_VERSION=6.0.0-base" >> $GITHUB_ENV
     - name: Set env slug
       run: echo "REPO_SLUG=xdev" >> $GITHUB_ENV
     - uses: docker/setup-qemu-action@v2
