--- a/.github/workflows/lab-base-xdev-main.yml
+++ b/.github/workflows/lab-base-xdev-main.yml
@@ -1,16 +1,16 @@
-name: Core CI Xdev Base
+name: Lab Base XDev Main
 
 on:
   push:
     branches:
-      - 'master'
+      - 'tmp'
     paths:
-      - Core/xdev/base/**/*.*
-      - .github/workflows/core-ci-xdev-base.yml
+      - Lab/Base/xdev/main/**/*.*
+      - .github/workflows/lab-base-xdev-main.yml
 
 defaults:
   run:
-    working-directory: Core/xdev/base
+    working-directory: Lab/Base/xdev/main
 
 jobs:
   build_publish:
@@ -18,7 +18,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Set env release
-      run: echo "RELEASE_VERSION=5.0.0-base" >> $GITHUB_ENV
+      run: echo "RELEASE_VERSION=5.1.0" >> $GITHUB_ENV
     - name: Set env slug
       run: echo "REPO_SLUG=xdev" >> $GITHUB_ENV
     - uses: docker/setup-qemu-action@v2
