--- a/Products/XPipe/Web/xpipe-v1-web-portal/.env.local
+++ b/Products/XPipe/Web/xpipe-v1-web-portal/.env.local
@@ -94,3 +94,4 @@ SECURITY_VENDOR_PATH=app/code/Security
 # Business Logic envs
 PIPELINES_GITHUB_ACCESS_TOKEN=
 PIPELINES_ORCHESTRATOR_ACCESS_TOKEN=
+PIPELINES_CONFIGMAP_VAULT_ACCESS_TOKEN=
